--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.15.11
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=name.connectionnotify
-archives_base_name=connectionnotify
+maven_group=name.servernotify
+archives_base_name=servernotify
 
 # Dependencies
 fabric_version=0.99.0+1.20.6
